<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyclApp</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">CycleApp</string>
    <string name="map_name">Map</string>
    <string name="preferences_name">Settings</string>
    <string name="about_name">About CyclApp</string>

    <!-- About Screen -->
    <string name="about_text">CyclApp is an Android application created to aid cyclists. It has been developed as a third year project by a student from the University of Sussex\'s Informatics Undergraduate department.</string>
    <string name="title_activity_about">About CyclApp</string>

    <!-- Navigation Screen -->
    <string name="title_activity_navigation">Navigation</string>
    <string name="mySpeedTitleText">Speed</string>
    <string name="myLocationTitleText">Position</string>
    <string name="myDistanceTitleText">Distance</string>
    <string name="myTimerTitleText">Timer</string>
    <string name="mySpeedText">0</string>
    <string name="myDistanceText">0</string>
    <string name="myLocationText">No Location</string>
    <string name="myTimerText">Start!</string>
    <string name="start_stop_button_label">START</string>
    <string name="pause_resume_button_label">PAUSE</string>
    <string name="map_button_label">View Map</string>
    <string name="mySpeedMeasurementText">mph</string>
    <string name="myDistanceMeasurementText">mi</string>

    <!-- Home Screen -->
    <string name="title_activity_home">CycleApp</string>
    <string name="big_home_title">HOME</string>
    <string name="home_title">Welcome</string>
    <string name="sat_nav_button_label">Navigation</string>
    <string name="view_past_rides_button_label">History</string>
    <string name="about_button_label">About</string>
    <string name="exit_button_label">Exit</string>
    <string name="test_button_label">Test</string>

    <!-- History Screen -->
    <string name="title_activity_history">History</string>
    <string name="menu_sort_date">Sort by Date</string>
    <string name="menu_sort_name">Sort by Name</string>
    <string name="menu_delete_all">Delete All</string>
     <string name="refresh">Refresh</string>

    <!-- Trip Display Screen -->
    <string name="title_activity_journey_display">JourneyDisplay</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">Test</string>
    <string name="trip_name">not found&#8230;</string>
    <string name="trip_date">not found&#8230;</string>
    <string name="trip_distance">not found&#8230;</string>
    <string name="trip_speed">not found&#8230;</string>
    <string name="trip_max_speed">not found&#8230;</string>
    <string name="trip_time">not found&#8230;</string>
    <string name="trip_speeds">not found&#8230;</string>
    <string name="trip_distance_title">Distance Travelled</string>
    <string name="trip_speed_title">Average Speed</string>
     <string name="trip_max_speed_title">Maximum Speed</string>
    <string name="trip_time_title">Duration</string>
    <string name="trip_speeds_title">Speeds</string>
    <string name="view_trip_button_label">Route</string>
    <string name="view_speeds_button_label">Speeds</string>
    <string name="delete_button_label">Delete</string>

    <!-- Map Screen -->
    <string name="title_activity_map">Map</string>
    <string name="map_speed_label">Speed: </string>
    <string name="map_speed_text">0 mph     </string>
    <string name="map_timer_label">Timer: </string>
    <string name="map_timer_text">00:00:00</string>

    <!-- Preferences Screen -->
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_route_map">RouteMap</string>

</resources>