<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9.5" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:layout_weight="1"
        android:text="@string/big_home_title"
        android:textStyle="bold" 
        android:textSize="30sp" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:layout_weight="0.5"
        android:text="@string/home_title"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sat_nav_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/sat_nav_button_label" >
    </Button>

    <Button
        android:id="@+id/view_past_rides_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/view_past_rides_button_label" >
    </Button>

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/about_button_label" >
    </Button>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/exit_button_label" >
    </Button>

</LinearLayout>